# wiohub_api

./: .env  .gitignore  Cargo.toml  README.md  config.toml  diesel.toml  old.rs  schema.prisma  simulate-device-sending-data.sh  simulate-device.sh
src/: .main.rs.swp  .models.rs.swp  config.rs  db.rs  errors.rs  handlers.rs  logger.rs  main.rs  models.rs  mqtt_srv.rs  routes.rs  security.rs  swagger.rs  utils.rs  websocket_srv.rs
src/handlers/: .mod.rs.swp  mod.rs
src/handlers/auth_handlers/: .auth.rs.swp  .security.rs.swp  auth.rs  mod.rs  security.rs  session.rs
src/handlers/device_handlers/: .device_data.rs.swp  device.rs  device_data.rs  device_status.rs  mod.rs
src/handlers/mqtt_handlers/: entry_data.rs  handle_device_registration.rs  handle_heartbeats.rs  mod.rs  mqtt.rs  real_time_data.rs
src/handlers/websocket_handlers/: .websocket.rs.swp  handle_realtime_data.rs  mod.rs  websocket.rs
src/modules/: mod.rs
src/modules/api/: handlers.rs  mod.rs  responder.rs  routes.rs  swagger.rs
src/modules/api/filters/: mod.rs
src/modules/mqtt/: config.rs  mod.rs  models.rs  mqtt_client.rs
src/modules/mqtt/handlers/: device_entry_data.rs  device_registration.rs  handle_heartbeats.rs  mod.rs  real_time_data.rs
src/shared/: errors.rs  mod.rs  zabbix.rs
src/shared/db/: jsonb_wrapper.rs  mod.rs  models.rs  schema.rs
src/utils/: .utils_models.rs.swp  device_data_model.rs  mod.rs  responder.rs  utils_functions.rs  utils_models.rs
