[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde_json = "1.0"
warp-rate-limit = "0.3.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
mongodb = "2.1"
futures = "0.3"
serde_qs = "0.12"
utoipa = { version = "^5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "^9", features = ["debug-embed", "reqwest", "actix-web"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
