[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
serde_json = "1.0"
toml = "0.8.20"
cookie = "0.18"
serde_qs = "0.12"
rumqttc = "0.24.0"
tokio-stream = "0.1.17"
log = "0.4.27"
env_logger = "0.11.8"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
rand = "0.8"
flate2 = "1.1.1"
tokio-util = "0.7.15"
async-stream = "0.3.6"
dotenvy = "0.15"
once_cell = "1.21.3"
diesel = { version = "2.2.9", features = ["postgres", "chrono", "serde_json", "r2d2", "numeric", "uuid"] }
reqwest = { version = "0.12.15", features = ["json"] }
utoipa = { version = "^5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "^9", features = ["debug-embed", "reqwest", "actix-web"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = { version = "1.10.1", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
